<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.khalisavirra.khalisavirra_1202154312_modul3.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/aquaImageDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/titleDetail"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/aquaImageDetail"
            android:padding="@dimen/activity_horizontal_margin"
            android:textColor="#05081c"
            android:text="@string/title_placeholder"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
        <TextView
            android:id="@+id/subTitleDetail"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleDetail"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/filler_text" />
        <ImageView
            android:id="@+id/galon"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/subTitleDetail"
            android:src="@drawable/images" />
        <ImageButton
            android:id="@+id/decrease"
            style="@style/MinusButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/galon"
            android:layout_marginLeft="120dp"
            android:background="@android:color/transparent"
            android:onClick="decreaseScore"
            android:src="@drawable/ic_minus"
            android:contentDescription="@string/minus_button" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/galon"
            android:layout_centerHorizontal="true"
            android:text="0" />

        <ImageButton
            android:id="@+id/increase"
            style="@style/PlusButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/galon"
            android:layout_marginLeft="280dp"
            android:background="@android:color/transparent"
            android:onClick="increaseScore"
            android:src="@drawable/ic_plus"
            android:contentDescription="@string/plus_button" />
    </RelativeLayout>
</ScrollView>
